# The-Lift

./: .gitignore  CMakeLists.txt  README.md
Lift_test/: CMakeLists.txt  tst_lift_test.cpp
TheLift/: CMakeLists.txt  ElevatorShaft.qml  FloorDelegate.qml  backend.cpp  backend.h  building.cpp  building.h  floor.cpp  floor.h  floormodel.cpp  floormodel.h  lift.cpp  lift.h  liftmanagercontroller.cpp  liftmanagercontroller.h  liftmanagerthread.cpp  liftmanagerthread.h  liftmanagerworker.cpp  liftmanagerworker.h  main.cpp  main.qml  qml.qrc
tst_Lift/: CMakeLists.txt  tst_lift.cpp
